# dt

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  install.ps1  install.sh  license
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  README.md
core/examples/: basic.rs
core/src/: lib.rs  template.rs  template_file.rs
docs/: README.md
