[package]
name = "core_dt"
version = "0.1.0"
edition = "2021"
authors = ["Theryston Santos <devtheryston@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dtemplate/dt"
description = "Build your entire project with one command 🚀"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.10.0", features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.13.0", default-features = false, features = ["std"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
